--- a/src/assets/views/header.html
+++ b/src/assets/views/header.html
@@ -1,6 +1,6 @@
 <div class="menu-open">
     <div class="header__logo--mobile logo">
-        <a href="index.html" target="_self"><img src="./assets/img/logo-w.svg" alt="logo-albufera" /></a>
+        <a href="index.html" target="_self" aria-label="Ir a la portada" ><img src="./assets/img/logo-w.svg" alt="logo-albufera" /></a>
     </div>
     <i id="open" class="fa fa-bars fa-2x" aria-hidden="true"></i>
 </div>
