--- a/src/assets/views/footer.html
+++ b/src/assets/views/footer.html
@@ -1,7 +1,7 @@
 <div class="footer__logo">
 
 
-    <a href="index.html">
+    <a href="index.html" aria-label="Ir a la portada">
         <svg fill="white" width="100" height="100" viewBox="0 0 100 100" class="footer__logo--svg"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M9.69086 60.218V18.0771L0 19.2935V60.218H9.69086Z" />
