--- a/src/assets/views/header.html
+++ b/src/assets/views/header.html
@@ -2,7 +2,36 @@
     <div class="header__logo--mobile logo">
         <a href="index.html" target="_self" aria-label="Ir a la portada" ><img src="./assets/img/logo-w.svg" alt="logo-albufera" /></a>
     </div>
-    <i id="open" class="fa fa-bars fa-2x" aria-hidden="true"></i>
+    <svg id="open">
+        <rect
+           style="fill:#ffffff;fill-rule:evenodd;stroke-width:0.116667"
+           id="rect10"
+           width="32"
+           height="4"
+           x="-66.370995"
+           y="-142.74376"
+           ry="0.94280905"
+           transform="scale(-1)" />
+        <rect
+           style="fill:#ffffff;fill-rule:evenodd;stroke-width:0.116667"
+           id="rect10-4"
+           width="32"
+           height="4"
+           x="34.370995"
+           y="-124.09494"
+           ry="0.94280905"
+           transform="scale(1,-1)" />
+        <rect
+           style="fill:#ffffff;fill-rule:evenodd;stroke-width:0.116667"
+           id="rect10-5"
+           width="32"
+           height="4"
+           x="-66.370995"
+           y="-133.41934"
+           ry="0.94280905"
+           transform="scale(-1)" />
+    </svg>
+   <!-- <i id="open" class="fa fa-bars fa-2x" aria-hidden="true"></i>-->
 </div>
 <div class="header__menu menu">
     <div class="menu-close" id="close">
