--- a/src/assets/views/header.html
+++ b/src/assets/views/header.html
@@ -2,7 +2,7 @@
     <div class="header__logo--mobile logo">
         <a href="index.html" target="_self" aria-label="Ir a la portada" ><img src="./assets/img/logo-w.svg" alt="logo-albufera" /></a>
     </div>
-    <svg id="open">
+    <svg id="open" width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <rect
            style="fill:#ffffff;fill-rule:evenodd;stroke-width:0.116667"
            id="rect10"
