--- a/src/assets/views/header.html
+++ b/src/assets/views/header.html
@@ -2,40 +2,21 @@
     <div class="header__logo--mobile logo">
         <a href="index.html" target="_self" aria-label="Ir a la portada" ><img src="./assets/img/logo-w.svg" alt="logo-albufera" /></a>
     </div>
-    <svg id="open" width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <rect
-           style="fill:#ffffff;fill-rule:evenodd;stroke-width:0.116667"
-           id="rect10"
-           width="32"
-           height="4"
-           x="-66.370995"
-           y="-142.74376"
-           ry="0.94280905"
-           transform="scale(-1)" />
-        <rect
-           style="fill:#ffffff;fill-rule:evenodd;stroke-width:0.116667"
-           id="rect10-4"
-           width="32"
-           height="4"
-           x="34.370995"
-           y="-124.09494"
-           ry="0.94280905"
-           transform="scale(1,-1)" />
-        <rect
-           style="fill:#ffffff;fill-rule:evenodd;stroke-width:0.116667"
-           id="rect10-5"
-           width="32"
-           height="4"
-           x="-66.370995"
-           y="-133.41934"
-           ry="0.94280905"
-           transform="scale(-1)" />
-    </svg>
+   <div class="open-menu">
+    <svg id="open" width="41" height="32" viewBox="0 0 41 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M0 3.5H41V0.5H0V3.5ZM41 18.5H0V15.5H41V18.5ZM41 31.5H0V28.5H41V31.5Z" fill="white"/>
+        </svg>
+        
+   </div>
    <!-- <i id="open" class="fa fa-bars fa-2x" aria-hidden="true"></i>-->
 </div>
 <div class="header__menu menu">
     <div class="menu-close" id="close">
-        <i class="fa fa-times fa-2x" aria-hidden="true"></i>
+        <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5 18.6213L29.9351 32.0563L32.0564 29.935L18.6214 16.5L32.0564 3.06498L29.935 0.943665L16.5 14.3787L3.06499 0.943612L0.943673 3.06493L14.3787 16.5L0.943665 29.935L3.06498 32.0564L16.5 18.6213Z" fill="var(--highline)"/>
+        </svg>
+            
+       <!-- <i class="fa fa-times fa-2x" aria-hidden="true"></i>-->
     </div>
     <div class="menu__logo logo">
         <a href="index.html">
