--- a/src/assets/styles/layouts/_styles.scss
+++ b/src/assets/styles/layouts/_styles.scss
@@ -131,6 +131,7 @@ header {
       color: var(--highline);
       font-family: var(--mainfont);
       font-weight: 400;
+      line-height: 1.5em;
 
       a {
         border-bottom: 3px solid white;
@@ -143,11 +144,17 @@ header {
   }
 }
 
+.open-menu,
+.menu-close {
+  float: right;
+  width: 50px;
+}
+
 .header__logo,
 .menu__logo {
   width: fit-content;
   max-width: 300px;
-  margin: 2em auto 0;
+  margin: 4em auto 0;
 
   svg path {
     fill: var(--highline);
@@ -330,7 +337,7 @@ svg circle:hover {
 .copy {
   clear: both;
   text-align: center;
-  color: var(--negro);
+  color: var(--black);
   font-weight: 400;
   font-size: 0.8em;
   padding: 0.8em;
