--- a/src/assets/styles/layouts/_styles.scss
+++ b/src/assets/styles/layouts/_styles.scss
@@ -361,8 +361,8 @@ svg circle:hover {
 
     .menu__logo {
       display: none;
-      width: 20%;
-      max-width: 180px;
+      //width: 20%;
+      //max-width: 180px;
       margin: 0 1em;
     }
 
